# SuperPanoPoint

./: .gitignore  LICENSE  README.md  generate_dataset.py  generate_pano_dataset.py  generate_pseudo_labels.py  generate_pseudo_labels_panorama.py  load_and_convert_checkpoint.py  prepare_dataset.py  pyproject.toml  pytest.ini  requirements_torch_gpu.txt  train.py
config/: config.yaml  config_magicpoint.yaml  config_superpoint.yaml  config_unet.yaml
superpanopoint/: __init__.py  lightning_wrapper.py  lossfn_optimizer.py
superpanopoint/datasets/: __init__.py  dataset_factory.py  homographic.py  homographic_contrastive.py  synthetic.py
superpanopoint/datasets/data_synth/: __init__.py  homographic_adapter.py  homographies.py  homography.py  shapes.py
superpanopoint/datasets/data_synth/shapes/: __init__.py  base.py  checkerboard.py  cube.py  line.py  polygon.py  star.py  stripe.py  utils.py
superpanopoint/datasets/pano/: README.md  __init__.py  c2e.py  e2c.py  e2p.py  utils.py
superpanopoint/datasets/synthetic/: utils.py
superpanopoint/models/: __init__.py  detector.py  predictor.py  unet.py
superpanopoint/models/decoders/: superpoint.py
superpanopoint/models/encoders/: vgg.py
superpanopoint/models/utils/: postprocess.py
superpanopoint/predictors/: __init__.py  base_predictor.py  magicpoint.py  matching.py  postprocess.py  superpoint.py  unet.py
superpanopoint/utils/: logger.py  visualize.py
tests/: test_loss_functions.py
tests/config/: config_homographic.yaml  config_synthetic.yaml
tests/datasets/: test_data_synth.py  test_synthetic_dataset.py
(+20 files in other folders)
