[tool.poetry]
name = "superpanopoint"
version = "0.1.0"
description = ""
authors = ["kutakieu <kutakieu22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-contrib-python = "^4.8.1.78"
pillow = "^10.1.0"
hydra-core = "^1.3.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
lightning = {version = "^2.1.1", optional = true, extras = ["training"]}
python-dotenv = "^1.0.0"

[tool.poetry.extras]
training = ["lightning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
